# cyberguard-mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CyberGuard MLOps.pptx  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  smoke.yml
dags/: cyberguard_mlops_dag.py
data/processed/: current_window.csv  network_flows_validated.csv  reference_window.csv
data/raw/: dataset_metadata.json  network_flows.csv
docs/: LATEX_REPORT_OUTLINE.md  PROJECT_PLAN.md  SCREENSHOTS.md  WORKLOG.md
local_inference/: predict_local.py
models/: cyberguard_model.joblib  metrics.json  model_card.json
monitoring/prometheus/: prometheus.yml
report/: main.tex  references.bib
reports/: data_validation.json  drift_report.json  evidently_drift_report.html  great_expectations_suite.json  great_expectations_validation.json  soc_threat_report.html
repport/: README_OVERLEAF.md  main.tex  preamble.tex  references.bib  titlepage.tex
repport/appendices/: a_screenshots.tex  b_commandes.tex
repport/chapters/: 00_resume.tex  01_introduction.tex  02_dataset.tex  03_architecture.tex  04_algorithmes_pipeline.tex  05_qualite_validation.tex  06_tracking_registry.tex  07_orchestration_cicd.tex  08_deploiement_monitoring.tex  09_interface_resultats.tex  10_reproduction.tex  11_conclusion.tex
scripts/: replay_ciciot2023_traffic.py
src/cyberguard_ml/: __init__.py  settings.py
src/cyberguard_ml/api/: main.py
tests/: test_api_contract.py  test_data_validation.py  test_soc_analyst.py  test_training.py
(+13 files in other folders)
